// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`compression.sql > line 7 1`] = `
[
  "CREATE TABLE cmdata(f1 text COMPRESSION pglz)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "cmdata",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "compression": "pglz",
                  "is_local": true,
                  "location": 20,
                  "typeName": {
                    "location": 23,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 11 1`] = `
[
  "CREATE TABLE cmdata1(f1 TEXT COMPRESSION lz4)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "cmdata1",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "compression": "lz4",
                  "is_local": true,
                  "location": 21,
                  "typeName": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 16 1`] = `
[
  "SELECT pg_column_compression(f1) FROM cmdata",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 38,
                  "relname": "cmdata",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 29,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_column_compression",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 20 1`] = `
[
  "SELECT SUBSTR(f1, 200, 5) FROM cmdata",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 31,
                  "relname": "cmdata",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 14,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 200,
                            },
                            "location": 18,
                          },
                        },
                        {
                          "A_Const": {
                            "ival": {
                              "ival": 5,
                            },
                            "location": 23,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "substr",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 24 1`] = `
[
  "SELECT * INTO cmmove1 FROM cmdata",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 27,
                  "relname": "cmdata",
                  "relpersistence": "p",
                },
              },
            ],
            "intoClause": {
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 14,
                "relname": "cmmove1",
                "relpersistence": "p",
              },
            },
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "A_Star": {},
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 26 1`] = `
[
  "SELECT pg_column_compression(f1) FROM cmmove1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 38,
                  "relname": "cmmove1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 29,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_column_compression",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 29 1`] = `
[
  "CREATE TABLE cmmove3(f1 text COMPRESSION pglz)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "cmmove3",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "compression": "pglz",
                  "is_local": true,
                  "location": 21,
                  "typeName": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 35 1`] = `
[
  "CREATE TABLE cmdata2 (LIKE cmdata1 INCLUDING COMPRESSION)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "cmdata2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "TableLikeClause": {
                  "options": 2,
                  "relation": {
                    "inh": true,
                    "location": 27,
                    "relname": "cmdata1",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 37 1`] = `
[
  "DROP TABLE cmdata2",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "cmdata2",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 40 1`] = `
[
  "CREATE TABLE cmdata2 (f1 int COMPRESSION pglz)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "cmdata2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "compression": "pglz",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 43 1`] = `
[
  "CREATE TABLE cmmove2(f1 text COMPRESSION pglz)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "cmmove2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "compression": "pglz",
                  "is_local": true,
                  "location": 21,
                  "typeName": {
                    "location": 24,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 50 1`] = `
[
  "CREATE OR REPLACE FUNCTION large_val() RETURNS TEXT LANGUAGE SQL AS
'select array_agg(fipshash(g::text))::text from generate_series(1, 256) g'",
  {
    "stmts": [
      {
        "stmt": {
          "CreateFunctionStmt": {
            "funcname": [
              {
                "String": {
                  "sval": "large_val",
                },
              },
            ],
            "options": [
              {
                "DefElem": {
                  "arg": {
                    "String": {
                      "sval": "sql",
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "language",
                  "location": 52,
                },
              },
              {
                "DefElem": {
                  "arg": {
                    "List": {
                      "items": [
                        {
                          "String": {
                            "sval": "select array_agg(fipshash(g::text))::text from generate_series(1, 256) g",
                          },
                        },
                      ],
                    },
                  },
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "as",
                  "location": 65,
                },
              },
            ],
            "replace": true,
            "returnType": {
              "location": 47,
              "names": [
                {
                  "String": {
                    "sval": "text",
                  },
                },
              ],
              "typemod": -1,
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 62 1`] = `
[
  "CREATE TABLE cmdata2 (f1 int)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "cmdata2",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "is_local": true,
                  "location": 22,
                  "typeName": {
                    "location": 25,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 64 1`] = `
[
  "ALTER TABLE cmdata2 ALTER COLUMN f1 TYPE varchar",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "ColumnDef": {
                      "location": 33,
                      "typeName": {
                        "location": 41,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "varchar",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                  "name": "f1",
                  "subtype": "AT_AlterColumnType",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "cmdata2",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 66 1`] = `
[
  "ALTER TABLE cmdata2 ALTER COLUMN f1 TYPE int USING f1::integer",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "ColumnDef": {
                      "location": 33,
                      "raw_default": {
                        "TypeCast": {
                          "arg": {
                            "ColumnRef": {
                              "fields": [
                                {
                                  "String": {
                                    "sval": "f1",
                                  },
                                },
                              ],
                              "location": 51,
                            },
                          },
                          "location": 53,
                          "typeName": {
                            "location": 55,
                            "names": [
                              {
                                "String": {
                                  "sval": "pg_catalog",
                                },
                              },
                              {
                                "String": {
                                  "sval": "int4",
                                },
                              },
                            ],
                            "typemod": -1,
                          },
                        },
                      },
                      "typeName": {
                        "location": 41,
                        "names": [
                          {
                            "String": {
                              "sval": "pg_catalog",
                            },
                          },
                          {
                            "String": {
                              "sval": "int4",
                            },
                          },
                        ],
                        "typemod": -1,
                      },
                    },
                  },
                  "name": "f1",
                  "subtype": "AT_AlterColumnType",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "cmdata2",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 74 1`] = `
[
  "ALTER TABLE cmdata2 ALTER COLUMN f1 SET STORAGE plain",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "String": {
                      "sval": "plain",
                    },
                  },
                  "name": "f1",
                  "subtype": "AT_SetStorage",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "cmdata2",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 76 1`] = `
[
  "INSERT INTO cmdata2 VALUES (repeat('123456789', 800))",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "cmdata2",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 35,
                                  "sval": {
                                    "sval": "123456789",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 800,
                                  },
                                  "location": 48,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "repeat",
                                },
                              },
                            ],
                            "location": 28,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 80 1`] = `
[
  "CREATE MATERIALIZED VIEW compressmv(x) AS SELECT * FROM cmdata1",
  {
    "stmts": [
      {
        "stmt": {
          "CreateTableAsStmt": {
            "into": {
              "colNames": [
                {
                  "String": {
                    "sval": "x",
                  },
                },
              ],
              "onCommit": "ONCOMMIT_NOOP",
              "rel": {
                "inh": true,
                "location": 25,
                "relname": "compressmv",
                "relpersistence": "p",
              },
            },
            "objtype": "OBJECT_MATVIEW",
            "query": {
              "SelectStmt": {
                "fromClause": [
                  {
                    "RangeVar": {
                      "inh": true,
                      "location": 56,
                      "relname": "cmdata1",
                      "relpersistence": "p",
                    },
                  },
                ],
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "targetList": [
                  {
                    "ResTarget": {
                      "location": 49,
                      "val": {
                        "ColumnRef": {
                          "fields": [
                            {
                              "A_Star": {},
                            },
                          ],
                          "location": 49,
                        },
                      },
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 82 1`] = `
[
  "SELECT pg_column_compression(f1) FROM cmdata1",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 38,
                  "relname": "cmdata1",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 29,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "pg_column_compression",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 86 1`] = `
[
  "CREATE TABLE cmpart(f1 text COMPRESSION lz4) PARTITION BY HASH(f1)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "partspec": {
              "location": 45,
              "partParams": [
                {
                  "PartitionElem": {
                    "location": 63,
                    "name": "f1",
                  },
                },
              ],
              "strategy": "PARTITION_STRATEGY_HASH",
            },
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "cmpart",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "f1",
                  "compression": "lz4",
                  "is_local": true,
                  "location": 20,
                  "typeName": {
                    "location": 23,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 90 1`] = `
[
  "ALTER TABLE cmpart ATTACH PARTITION cmpart2 FOR VALUES WITH (MODULUS 2, REMAINDER 1)",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "PartitionCmd": {
                      "bound": {
                        "location": 55,
                        "modulus": 2,
                        "remainder": 1,
                        "strategy": "h",
                      },
                      "name": {
                        "inh": true,
                        "location": 36,
                        "relname": "cmpart2",
                        "relpersistence": "p",
                      },
                    },
                  },
                  "subtype": "AT_AttachPartition",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "cmpart",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 97 1`] = `
[
  "CREATE TABLE cminh() INHERITS(cmdata, cmdata1)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "inhRelations": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 30,
                  "relname": "cmdata",
                  "relpersistence": "p",
                },
              },
              {
                "RangeVar": {
                  "inh": true,
                  "location": 38,
                  "relname": "cmdata1",
                  "relpersistence": "p",
                },
              },
            ],
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "cminh",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 101 1`] = `
[
  "SET default_toast_compression = ''",
  {
    "stmts": [
      {
        "stmt": {
          "VariableSetStmt": {
            "args": [
              {
                "A_Const": {
                  "location": 32,
                  "sval": {
                    "sval": "",
                  },
                },
              },
            ],
            "kind": "VAR_SET_VALUE",
            "name": "default_toast_compression",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 107 1`] = `
[
  "ALTER TABLE cmdata ALTER COLUMN f1 SET COMPRESSION lz4",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "String": {
                      "sval": "lz4",
                    },
                  },
                  "name": "f1",
                  "subtype": "AT_SetCompression",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "cmdata",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 112 1`] = `
[
  "ALTER TABLE cmdata2 ALTER COLUMN f1 SET COMPRESSION default",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "String": {
                      "sval": "default",
                    },
                  },
                  "name": "f1",
                  "subtype": "AT_SetCompression",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "cmdata2",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 116 1`] = `
[
  "ALTER MATERIALIZED VIEW compressmv ALTER COLUMN x SET COMPRESSION lz4",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "String": {
                      "sval": "lz4",
                    },
                  },
                  "name": "x",
                  "subtype": "AT_SetCompression",
                },
              },
            ],
            "objtype": "OBJECT_MATVIEW",
            "relation": {
              "inh": true,
              "location": 24,
              "relname": "compressmv",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 120 1`] = `
[
  "ALTER TABLE cmpart1 ALTER COLUMN f1 SET COMPRESSION pglz",
  {
    "stmts": [
      {
        "stmt": {
          "AlterTableStmt": {
            "cmds": [
              {
                "AlterTableCmd": {
                  "behavior": "DROP_RESTRICT",
                  "def": {
                    "String": {
                      "sval": "pglz",
                    },
                  },
                  "name": "f1",
                  "subtype": "AT_SetCompression",
                },
              },
            ],
            "objtype": "OBJECT_TABLE",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "cmpart1",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 124 1`] = `
[
  "INSERT INTO cmpart VALUES (repeat('123456789', 1004))",
  {
    "stmts": [
      {
        "stmt": {
          "InsertStmt": {
            "override": "OVERRIDING_NOT_SET",
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "cmpart",
              "relpersistence": "p",
            },
            "selectStmt": {
              "SelectStmt": {
                "limitOption": "LIMIT_OPTION_DEFAULT",
                "op": "SETOP_NONE",
                "valuesLists": [
                  {
                    "List": {
                      "items": [
                        {
                          "FuncCall": {
                            "args": [
                              {
                                "A_Const": {
                                  "location": 34,
                                  "sval": {
                                    "sval": "123456789",
                                  },
                                },
                              },
                              {
                                "A_Const": {
                                  "ival": {
                                    "ival": 1004,
                                  },
                                  "location": 47,
                                },
                              },
                            ],
                            "funcformat": "COERCE_EXPLICIT_CALL",
                            "funcname": [
                              {
                                "String": {
                                  "sval": "repeat",
                                },
                              },
                            ],
                            "location": 27,
                          },
                        },
                      ],
                    },
                  },
                ],
              },
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 142 1`] = `
[
  "SELECT length(f1) FROM cmdata",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 23,
                  "relname": "cmdata",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 7,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "ColumnRef": {
                            "fields": [
                              {
                                "String": {
                                  "sval": "f1",
                                },
                              },
                            ],
                            "location": 14,
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "length",
                          },
                        },
                      ],
                      "location": 7,
                    },
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 148 1`] = `
[
  "CREATE TABLE badcompresstbl (a text COMPRESSION I_Do_Not_Exist_Compression)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "badcompresstbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "compression": "i_do_not_exist_compression",
                  "is_local": true,
                  "location": 29,
                  "typeName": {
                    "location": 31,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 148 2`] = `
[
  " -- fails
CREATE TABLE badcompresstbl (a text)",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 23,
              "relname": "badcompresstbl",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "a",
                  "is_local": true,
                  "location": 39,
                  "typeName": {
                    "location": 41,
                    "names": [
                      {
                        "String": {
                          "sval": "text",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`compression.sql > line 150 1`] = `
[
  " -- fails
DROP TABLE badcompresstbl",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "badcompresstbl",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
